# co-evm

./: Cargo.toml  README.md
contracts/: CrossEvmLib.sol  CrossEvmStorage.sol  Ping.sol  PingRevert.sol  Pong.sol  PongRevert.sol  PrivateCounter.sol  PrivateERC20.sol  PublicERC20.sol  SimplePrivateERC20.sol  SimpleStorage.sol  TestCounter.sol
contracts/cache/: solidity-files-cache.json
src/: child_evm.rs  crypto.rs  custom_handler.rs  lib.rs  parent_evm.rs  precompiles.rs  transaction_coordinator.rs
