[package]
name = "co-evm"
version = "0.1.0"
edition = "2024"

[dependencies]
revm = { version = "30.2.0", features = ["std"] }
# context = { workspace = true }
revm-context = "10.1.2"

# alloy
alloy-sol-types = { version = "1.3.1", default-features = false }
alloy-primitives = { version = "1.3.1", default-features = false }

# misc
anyhow = "1.0.89"
hex = "0.4"

# cryptography
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
rand = "0.8"
parking_lot = "0.12.5"
src = "0.0.6"
